# embedded_tl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: unit_tests.yml
docs/: embedded_allocator.md  embedded_bits.md  embedded_concepts.md  embedded_driver.md  embedded_policy.md  embedded_region.md  embedded_registers.md  embedded_types.md
embedded/: CMakeLists.txt
embedded/inc/: embedded_actions.hpp  embedded_allocator.hpp  embedded_bits.hpp  embedded_concepts.hpp  embedded_driver.hpp  embedded_policy.hpp  embedded_region.hpp  embedded_register.hpp  embedded_return_type.hpp  embedded_types.hpp  embedded_utilities.hpp
tests/: CMakeLists.txt
tests/inc/: uut_catch2.hpp
tests/inc/enum/: uut_enum.hpp
tests/inc/generators/: uut_generator.hpp
tests/inc/to_string/: uut_to_string.hpp
tests/src/: embedded_return_type.cpp  uut_embedded_actions.cpp  uut_embedded_allocator.cpp  uut_embedded_bits.cpp  uut_embedded_concepts.cpp  uut_embedded_driver.cpp  uut_embedded_policy.cpp  uut_embedded_region.cpp  uut_embedded_register.cpp  uut_embedded_return_type.cpp
tests/src/to_string/: uut_to_string.cpp
tools/cmake/: arm_build_toolchain.cmake  compiler_default_warnings.cmake  dep_catch2.cmake  gcc_unit_test_toolchain.cmake
tools/docker/: Dockerfile  github.docker  local.docker
tools/docker/linux/: arm_gnu_toolchain.sh  cmake_install.sh
